Add NuGet packager

--- a/NuGet/NuGet.config
+++ b/NuGet/NuGet.config
@@ -3,6 +3,6 @@
   <apikeys>
   </apikeys>
   <packageSources>
-    <add key="NuGet official package source" value="https://www.nuget.org" />
+    <add key="AmazonMarketWebServices package source" value="https://github.com/wbsimms/AmazonMarketWebServices" />
   </packageSources>
 </configuration>
