--- a/NuGet/Package.nuspec
+++ b/NuGet/Package.nuspec
@@ -1,29 +1,26 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>NuGet</id>
-    <version>1.0.0</version>
-    <title>NuGet</title>
-    <authors>barre</authors>
+    <id>AmazonMarketWebServices</id>
+    <version>1.0.2</version>
+    <title>AmazonMarketWebServices</title>
+    <authors>barrett@wbsimms.com</authors>
     <owners></owners>
     <description>
-      A long description of the package. This shows up in the right pane of the Add Package Dialog as well as in the Package Manager Console when listing packages using the Get-Package command.
+      The Amazon MarketWebServices C# code compiled for 4.6
     </description>
     <releaseNotes>
     </releaseNotes>
     <summary>
-      A short description of the package. If specified, this shows up in the middle pane of the Add Package Dialog. If not specified, a truncated version of the description is used instead.
+      The Amazon MarketWebServices C# code compiled for 4.6
     </summary>
     <language>en-US</language>
-    <projectUrl>https://nuget.org/packages/NuGet</projectUrl>
+    <projectUrl>https://github.com/wbsimms/AmazonMarketWebServices</projectUrl>
     <iconUrl>https://nuget.org/Content/Images/packageDefaultIcon-50x50.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <licenseUrl>http://opensource.org/licenses/Apache-2.0</licenseUrl>
     <copyright>Copyright  2016</copyright>
     <dependencies>
-        <group targetFramework="net40">
-          <dependency id="log4net" version="1.2.10" />
-        </group>
     </dependencies>
     <references></references>
     <tags></tags>
